2009-04-14  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/qchemformat.cpp (ReadMolecule): Fix tokenize mistake
	when reading Q-Chem vibrational intensities.

2009-04-11  Michael Banck  <mbanck@gmx.net>

	* src/formats/outformat.cpp (ReadMolecule): Added MOLPRO output
	file detection.

2009-04-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/rotamer.cpp, src/math/spacegroup.cpp, src/mol.cpp,
	src/formats/smilesformat.cpp, src/formats/pdbformat.cpp,
	src/formats/MCDLformat.cpp, src/formats/xml/cmlformat.cpp: 
	Compiler warnings and cppcheck complaint fixes.

2009-04-08  Michael Banck  <mbanck@gmx.net>

	* src/formats/gaussformat.cpp (ReadMolecule): Adjust normal modes
	parsing when Raman intensities are present.  Fixes PR#2728543.

2009-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fix compile error. Make sure to
	cast NULL in a vector constructor.

	* src/formats/CMakeLists.txt: Add Michael's Molpro format.

	* src/forcefield/forcefieldmmff94.cpp: Fix errors in PR#2741658
	and PR#2741669, reported by  Tushar Jain.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/molproformat.cpp (ReadMolecule): Added dipole 
	moments.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/nwchemformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Fixes PR#2728437.

	* src/formats/moldenformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Closes PR#2737715.

	* src/formats/molproformat.cpp: New file.  Closes PR#2731625.
	* src/formats/Makefile.am: Updated.
	* src/formats/Makefile.in: Regenerated.

2009-04-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Handle cis/trans symbols correctly
	during reading and writing. Uses Tim's stereochemistry code which I
	inserted into the start of the file. Some notes about the code:
	(1) The legacy code did not set cis/trans bonds in rings. Don't know